unpackaged/main/default/objects/SDO_C360_Address__c/SDO_C360_Address__c.object-meta.xml
<CustomObject>
    <description>What: Used by Customer 360 Component to display external addresses
Who: Service Cloud Team &amp; Hanul Park</description>
    <label>C360 Address</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>C360 Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C360 Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>