unpackaged/main/default/objects/SDO_C360_Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <defaultValue>&quot;Shipping&quot;</defaultValue>
    <inlineHelpText>Examples Shipping, Billing, Home. The address type will be displayed on the C360 component.</inlineHelpText>
    <label>Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>