unpackaged/main/default/objects/SDO_C360_Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>